--- a/index.html
+++ b/index.html
@@ -8,16 +8,11 @@
   <title>WORDLE українською — вгадуй нове слово щодня</title>
   <meta name="description" content="Вгадай слово за 6 спроб. Кожного дня нове завдання">
 
-  <!-- 
-  <meta property="og:title" content="A Basic HTML5 Template">
+  <meta property="og:title" content="WORDLE Українською">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
-  <meta property="og:description" content="A simple HTML5 Template for new projects.">
+  <meta property="og:description" content="Вгадай слово за 6 спроб. Кожного дня нове завдання">
   <meta property="og:image" content="image.png"> 
-
-  <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="powerlanguage.co.uk">
-  -->
+  <meta property="og:site_name" content="WORDLE UA">
 
   <meta name="theme-color" content="#6aaa64">
   <link href="images/wordle_logo_32x32.png" rel="icon shortcut" sizes="3232">
