--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="WORDLE Українською">
   <meta property="og:type" content="website">
   <meta property="og:description" content="Вгадай слово за 6 спроб. Кожного дня нове завдання">
-  <meta property="og:image" content="image.png"> 
+  <meta property="og:image" content="https://kokokostya.github.io/Wordle-UA/images/cover.png"> 
   <meta property="og:site_name" content="WORDLE UA">
 
   <meta name="theme-color" content="#6aaa64">
