--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <link rel="stylesheet" href="css/styles.css">
 
   <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
-<script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-  <script src="js/app.js" type="text/babel"></script>
+  <script src="js/src/app.js" type="text/babel"></script>
 </head>
 
 <body>
