--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
   <div id="app"><!-- Game board here --></div>
   <div id="modal"><!-- Modal here --></div>
 
-  <script src="js/app.js"></script>
+  <script src="js/app.js?v=20-01-22"></script>
 </body>
 </html>
