--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <meta property="og:image" content="https://kokokostya.github.io/Wordle-UA/images/cover.png"> 
   <meta property="og:site_name" content="WORDLE UA">
 
-  <meta name="theme-color" content="#6aaa64">
-  <link href="images/wordle_logo_32x32.png" rel="icon shortcut" sizes="3232">
-  <link href="images/wordle_logo_192x192.png" rel="apple-touch-icon">
+  <meta name="theme-color" content="#1A7EFF">
+  <link href="images/icon_32.png" rel="icon shortcut" sizes="3232">
+  <link href="images/icon_192.png" rel="apple-touch-icon">
 
   <link rel="stylesheet" href="css/styles.css">
 
