--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:image" content="https://kokokostya.github.io/Wordle-UA/images/cover.png"> 
   <meta property="og:site_name" content="WORDLE UA">
 
-  <meta name="theme-color" content="#1A7EFF">
+  <meta name="theme-color" content="#СССССС">
   <link href="images/icon_32.png" rel="icon shortcut" sizes="3232">
   <link href="images/icon_192.png" rel="apple-touch-icon">
 
