--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>WORDLE українською — вгадуй нове слово щодня</title>
-  <meta name="description" content="Вгадай слово за 6 спроб. Щодня нове завдання">
+  <meta name="description" content="Вгадай слово з шести спроб. Щодня нове завдання">
 
   <meta property="og:title" content="WORDLE Українською">
   <meta property="og:type" content="website">
-  <meta property="og:description" content="Вгадай слово за 6 спроб. Щодня нове завдання">
+  <meta property="og:description" content="Вгадай слово з шести спроб. Щодня нове завдання">
   <meta property="og:image" content="https://kokokostya.github.io/Wordle-UA/images/cover.png"> 
   <meta property="og:site_name" content="WORDLE UA">
 
@@ -38,6 +38,6 @@
   <div id="app"><!-- Game board here --></div>
   <div id="modal"><!-- Modal here --></div>
 
-  <script src="js/app.js?v=1.3.10"></script>
+  <script src="js/app.js?v=1.3.11"></script>
 </body>
 </html>
