--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
   <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
-  <!-- <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script> -->
-  <!-- <script src="js/src/app.js" type="text/babel"></script> -->
+  <!-- <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+  <script src="js/src/app.js" type="text/babel"></script> -->
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-X3C7CJB93V"></script>
   <script>
