--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
   <meta property="og:title" content="WORDLE Українською">
   <meta property="og:type" content="website">
   <meta property="og:description" content="Вгадай слово з шести спроб. Щодня нове завдання">
-  <meta property="og:image" content="https://kokokostya.github.io/Wordle-UA/images/cover.png"> 
+  <meta property="og:image" content="https://kokokostya.github.io/Wordle-UA/images/cover.png">
   <meta property="og:site_name" content="WORDLE UA">
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="WORDLE Українською">
+  <meta name="twitter:description" content="Вгадай слово з шести спроб. Щодня нове завдання">
+  <meta name="twitter:image" content="https://kokokostya.github.io/Wordle-UA/images/cover.png">
 
   <meta name="theme-color" content="#00aa55">
   <link href="images/icon_32.png" rel="icon shortcut" sizes="3232">
