--- a/index.html
+++ b/index.html
@@ -14,21 +14,16 @@
   <meta property="og:image" content="https://kokokostya.github.io/Wordle-UA/images/cover.png">
   <meta property="og:site_name" content="WORDLE UA">
 
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="WORDLE Українською">
-  <meta name="twitter:description" content="Вгадай слово з шести спроб. Щодня нове завдання">
-  <meta name="twitter:image" content="https://kokokostya.github.io/Wordle-UA/images/cover.png">
-
   <meta name="theme-color" content="#00aa55">
   <link href="images/icon_32.png" rel="icon shortcut" sizes="3232">
   <link href="images/icon_192.png" rel="apple-touch-icon">
 
   <link rel="stylesheet" href="css/styles.css?v=1.4.5">
 
-  <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
-  <!-- <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-  <script src="js/src/app.js" type="text/babel"></script> -->
+  <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
+  <!-- <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> -->
+  <!-- <script src="js/src/app.js" type="text/babel"></script> -->
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-X3C7CJB93V"></script>
   <script>
