--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <!-- <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> -->
   <!-- <script src="js/src/app.js" type="text/babel"></script> -->
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-X3C7CJB93V"></script>
