--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
   <link rel="stylesheet" href="css/styles.css?v=1.4.6">
 
-  <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
+  <script src="js/react.production.min.js"></script>
+  <script src="js/react-dom.production.min.js"></script>
   <!-- <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script src="js/src/app.js" type="text/babel"></script> -->
 
