--- a/6.html
+++ b/6.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-  <div id="app"><!-- Game board here --></div>
+  <div id="app" data-letters="6"><!-- Game board here --></div>
   <div id="modal"><!-- Modal here --></div>
 
   <!-- <script src="js/app.js?v=1.7.15"></script> -->
