--- a/6.html
+++ b/6.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>WORDLE українською — вгадуй нове слово щодня</title>
-  <meta name="description" content="Вгадай слово з шести спроб. Щодня нове завдання">
+  <title>WORDLE 6 — продовжуй вгадувати нове слово щодня!</title>
+  <meta name="description" content="Шестибуквенна версія гри WORDLE українською">
 
-  <meta property="og:title" content="WORDLE Українською">
+  <meta property="og:title" content="WORDLE 6">
   <meta property="og:type" content="website">
-  <meta property="og:description" content="Вгадай слово з шести спроб. Щодня нове завдання">
-  <meta property="og:image" content="https://kokokostya.github.io/Wordle-UA/images/cover.png">
-  <meta property="og:site_name" content="WORDLE UA">
+  <meta property="og:description" content="Той самий WORDLE українською, але на 6 букв!">
+  <meta property="og:image" content="https://kokokostya.github.io/Wordle-UA/images/cover_6.png">
+  <meta property="og:site_name" content="WORDLE 6">
 
   <meta name="theme-color" content="#00aa55">
   <link href="images/icon_32.png" rel="icon shortcut" sizes="3232">
