--- a/6.html
+++ b/6.html
@@ -22,8 +22,8 @@
 
   <script src="js/react.production.min.js"></script>
   <script src="js/react-dom.production.min.js"></script>
-  <!-- <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script src="js/src/app_6.js" type="text/babel"></script> -->
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script src="js/src/app_6.js" type="text/babel"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-X3C7CJB93V"></script>
   <script>
@@ -35,9 +35,9 @@
 </head>
 
 <body>
-  <div id="app" data-letters="6"><!-- Game board here --></div>
+  <div id="app"><!-- Game board here --></div>
   <div id="modal"><!-- Modal here --></div>
 
-  <script src="js/app_6.js?v=0.9.4"></script>
+  <!-- <script src="js/app_6.js?v=0.9.4"></script> -->
 </body>
 </html>
