--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+    gtag('js', new Date());git
     gtag('config', 'G-X3C7CJB93V');
   </script>
 </head>
