--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
   <div id="app"><!-- Game board here --></div>
   <div id="modal"><!-- Modal here --></div>
 
-  <script src="js/app.js?v=2.3.18"></script>
+  <script src="js/app_new_dics.js?v=2.3.18"></script>
 </body>
 </html>
