--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
   <script src="js/react.production.min.js"></script>
   <script src="js/react-dom.production.min.js"></script>
-  <!-- <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script src="js/src/app.js" type="text/babel"></script> -->
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script src="js/src/app.js" type="text/babel"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-X3C7CJB93V"></script>
   <script>
@@ -38,6 +38,6 @@
   <div id="app"><!-- Game board here --></div>
   <div id="modal"><!-- Modal here --></div>
 
-  <script src="js/app.js?v=2.3.25"></script>
+  <!-- <script src="js/app.js?v=2.3.25"></script> -->
 </body>
 </html>
